Form Class: improve input sizing in nested form tables (prevent overflow)

--- a/themes/Default/css/main.css
+++ b/themes/Default/css/main.css
@@ -1332,11 +1332,15 @@ select[multiple] {
     margin-bottom: 10px;
 }
 
+.formTable .standardWidth {
+    width: auto;
+}
+
 .formTable input,
 .formTable select,
 .formTable textarea {
 	float: left;
-	margin-left: 0px;
+    margin-left: 0px;
 }
 
 
